deployment_app.yaml

# pod-and-replicaset.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
  labels:
    app: myapp
spec:
  containers:
    - name: my-container
      image: nginx

---
apiVersion: apps/v1
kind: ReplicaSet
metadata:
  name: my-replicaset
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: my-container
          image: nginx



apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile-deployment
  namespace: abdullah
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bma
  template:
    metadata:
      labels:
        app: bma
    spec:
      containers:
      - name: react-app
        image: abdullah78623/book-my-show:v1
        ports:
        - containerPort: 3000
