node_port_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-app-service
spec:
  type: NodePort
  selector:
    app: user-profile
  ports:
    - port: 80          # ClusterIP port inside the cluster
      targetPort: 3130  # Container port inside pod
      nodePort: 31000   # External port on worker nodes (optional)
